force-app/main/default/objects/Project__c/fields/Completion_Project_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Completion_Project_Percentage__c</fullName>
    <formula>IF(
  Total_Milestones__c= 0,
  0,
  Total_Milestone_Completion_Sum__c/ (Total_Milestones__c * 100)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion Project Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>