force-app/main/default/objects/Project__c/fields/Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Status__c</fullName>
    <formula>CASE(
  Completion_Project_Percentage__c,
  0, &quot;Not Started&quot;,
  100, &quot;Complete&quot;,
  &quot;In Progress&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Status</label>
    <type>Text</type>
</CustomField>