force-app/main/default/objects/Project__c/fields/Total_Milestone_Completion_Sum__c.field-meta.xml
<CustomField>
    <fullName>Total_Milestone_Completion_Sum__c</fullName>
    <label>Total Milestone Completion Sum</label>
    <summarizedField>Project_Milestone__c.Completion_Percent_Value__c</summarizedField>
    <summaryForeignKey>Project_Milestone__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>